@@ -9,6 +9,7 @@
             "arrangeInFront:", 
             "cancel:", 
             "capitalizeWord:", 
+            "centerSelectionInVisibleArea:", 
             "changeColor:", 
             "changeFont:", 
             "checkSpelling:", 
@@ -81,6 +82,7 @@
             "pasteFont:", 
             "pasteRuler:", 
             "performClose:", 
+            "performFindPanelAction:", 
             "performMiniaturize:", 
             "performZoom:", 
             "print:", 
